test/errors/structure_types_error/zs/packable_array_field_error.zs
package packable_array_field_error;

struct PackableArrayFieldError
{
    packable uint8 array[];
};
